# SARM

./: .gitignore  README.md  SARM_Specification_Draft_v0.3.txt
SARM_Bridge_Toolkit/: README.md  build.sh  build_deploy.sh  docker-compose.yml  redeploy.sh  redeploy_reseed.sh
SARM_Bridge_Toolkit/sarm-inspector/: README.md  index.html
SARM_Bridge_Toolkit/sarm-spec/: README.md
SARM_Bridge_Toolkit/sarm-spec/schema/: bulk-request.schema.json  capabilities.schema.json  decision.schema.json  error.schema.json  event.schema.json  list-response.schema.json  sarm-openapi.yaml  scope-item.schema.json
SARM_Bridge_Toolkit/sarm-ss-bridge/: .env.example  Dockerfile  README.md  config.example.yaml  pyproject.toml
SARM_Bridge_Toolkit/sarm-ss-bridge/app/: __init__.py  capabilities.py  config.py  decisions.py  discovery.py  main.py  models.py  return_channel.py
SARM_Bridge_Toolkit/sarm-ss-bridge/app/seed/: __init__.py  seed.py
SARM_Bridge_Toolkit/sarm-ss-bridge/app/sources/: __init__.py  sql_source.py
